Sat Jun 18 07:27:27 2011  Tanaka Akira  <akr@fsij.org>

	* internal.h: declare internal functions here.

	* node.h: declare NODE dependent internal functions here.

	* iseq.h: declare rb_iseq_t dependent internal functions here.

	* vm_core.h: declare rb_thread_t dependent internal functions here.

	* bignum.c, class.c, compile.c, complex.c, cont.c, dir.c, encoding.c,
	  enumerator.c, error.c, eval.c, file.c, gc.c, hash.c, inits.c, io.c,
	  iseq.c, load.c, marshal.c, math.c, numeric.c, object.c, parse.y,
	  proc.c, process.c, range.c, rational.c, re.c, ruby.c, string.c,
	  thread.c, time.c, transcode.c, variable.c, vm.c,
	  tool/compile_prelude.rb: don't declare internal functions declared
	  in above headers.  include above headers if required.

	  Note that rb_thread_mark() was declared as
	  void rb_thread_mark(rb_thread_t *th) in cont.c but defined as
	  void rb_thread_mark(void *ptr) in vm.c.  Now it is declared as
	  the later in internal.h.

Sat Jun 18 02:36:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (VpNewRbClass): fix type of the 2nd
	  argument.

	* ext/bigdecimal/bigdecimal.h: ditto.

Sat Jun 18 02:30:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (BigMath_s_exp): move BigMath.exp from
	  bigdecimal/math.rb.

	* ext/bigdecimal/lib/bigdecimal/math.rb: ditto.

	* test/bigdecimal/test_bigdecimal.rb: move test for BigMath.exp from
	  test/bigdecimal/test_bigmath.rb.

	* test/bigdecimal/test_bigmath.rb: ditto.

Sat Jun 18 00:20:54 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c: do not define wnum[01].

Fri Jun 17 18:57:36 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* compile.c (iseq_compile_each): fix return value of obj[a,*b]=c.

Fri Jun 17 13:09:45 2011  Eric Hodel  <drbrain@segment7.net>

	* ext/curses/curses.c:  Clean up documentation.

Fri Jun 17 09:25:14 2011  Eric Hodel  <drbrain@segment7.net>

	* ext/curses/curses.c:  Document curses constants.  Patch by Vincent